Trying to bind that datagrid to ObservableCollection

--- a/WPFApp1/ToDoInterface2.csproj
+++ b/WPFApp1/ToDoInterface2.csproj
@@ -49,9 +49,12 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="UIAutomationProvider" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="XSharp.RT, Version=2.6.0.0, Culture=neutral, PublicKeyToken=ed555a0467764586, processorArchitecture=MSIL" />
+    <Reference Include="XSharp.VFP, Version=2.6.0.0, Culture=neutral, PublicKeyToken=ed555a0467764586, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -59,10 +62,6 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="cntToDo.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="grdTasks.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -76,9 +75,6 @@
     </Compile>
     <Compile Include="cntToDo.xaml.cs">
       <DependentUpon>cntToDo.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="grdTasks.xaml.cs">
-      <DependentUpon>grdTasks.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
